  /*  $Id: CHANGES,v 1.56 2006/03/01 04:55:55 romberg Exp $  */

Changes since xosview-1.8.3

  - netIface support for NetBSD.  Patch from  Bernd Ernesti.

Changes since xosview-1.8.2
 - NFSDStats ans NFSStats Graph, Decay and UsedMode are now configurable

 - SunOS updates, compiles now cleanly with gcc 3.3.2

 - Fix for linux intmeter for interrupts > 16 thanks to John Adams

 - Small patch from Gunnar Wolf for lmstemp (change int to double)

 - Fix battery meter for case where lack of APM report -1%.  Thanks
   to Gunnar Wolf.

 - Allow netmeter to specify, via the Xresource xosview*netIface,
   which network interface it will monitor.  Patch thanks to Gunnar Wolf.

 - Add patch for additional cpu fields in linux for 2.6 kernel.  Patch thanks
   to Hendrik Fehr.

 - Add various pathes from the NetBSD project.  Pathes contributed by Roland
   Illig.

 - Fix bug 854215 (-v and --version still needed to connect to X server)

Changes since xosview-1.8.1
 - Applied sourceforge patch 927112 from Russell Reed which fixes
   the swapmeter when USESYSCALLS is defined.

 - Applied sourceforge patch 959433 which adds acpi support to
   the linux battery meter.

 - Applied a patch similar to the sourceforge patch 586184 submitted
   by Mark Guertin.

 - Linux diskmeter now uses vmstat and thus works with 2.6.
   But the units problem (block size) probably still remains.

 - Linux pagemeter should now work with 2.6 kernels

 - Merge in the fedora-2 nfs patch.

 - Merge in the fedora-2 strip patch.

 - Merge in the fedora-2 proc patch.

 - Merge in the fedora-2 s390 patch.

 - Merge in the fedora-2 non-i386 patch.

 - Merge in the fedora-2 linux-2.6 kernel (related) patch.

 - Add an autogen.sh script.  This script runs autoconf to create
   the configure script.

Changes since xosview-1.8.0

- Update linux port to build with gcc 3.2 and 3.3 (should still work
  with 2.95.

- Add -Wno-deprecated for gcc builds.  This avoids warnings about